--- a/package.json
+++ b/package.json
@@ -1,42 +1,54 @@
 {
-  "name": "sctech",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
-  },
-  "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "^1.17.7",
-    "@react-navigation/bottom-tabs": "^6.3.1",
-    "@react-navigation/native": "^6.0.10",
-    "@react-navigation/native-stack": "^6.6.2",
-    "axios": "^0.27.2",
-    "buffer": "^6.0.3",
-    "expo": "~45.0.0",
-    "expo-linear-gradient": "^11.3.0",
-    "expo-notifications": "^0.15.4",
-    "expo-status-bar": "~1.3.0",
-    "moment": "^2.29.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-modal": "^13.0.1",
-    "react-native-tab-view": "^3.1.1",
-    "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "0.17.7",
-    "react-redux": "^8.0.2",
-    "redux": "^4.2.0",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.1",
-    "socket.io-client": "^4.5.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9"
-  },
-  "private": true
+    "name": "sctech",
+    "version": "1.0.0",
+    "main": "node_modules/expo/AppEntry.js",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web",
+        "eject": "expo eject"
+    },
+    "dependencies": {
+        "@expo/vector-icons": "^13.0.0",
+        "@react-native-async-storage/async-storage": "^1.17.7",
+        "@react-native-firebase/app": "^15.1.1",
+        "@react-native-firebase/crashlytics": "^15.1.1",
+        "@react-native-firebase/perf": "^15.1.1",
+        "@react-navigation/bottom-tabs": "^6.3.1",
+        "@react-navigation/drawer": "^6.4.3",
+        "@react-navigation/native": "^6.0.10",
+        "@react-navigation/native-stack": "^6.6.2",
+        "axios": "^0.27.2",
+        "buffer": "^6.0.3",
+        "expo": "~45.0.0",
+        "expo-device": "^4.2.0",
+        "expo-linear-gradient": "^11.3.0",
+        "expo-notifications": "^0.15.4",
+        "expo-permissions": "^13.2.0",
+        "expo-status-bar": "~1.3.0",
+        "expo-updates": "~0.13.3",
+        "moment": "^2.29.4",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "react-native": "0.68.2",
+        "react-native-gesture-handler": "~2.2.1",
+        "react-native-modal": "^13.0.1",
+        "react-native-paper": "^4.12.2",
+        "react-native-reanimated": "^2.9.1",
+        "react-native-safe-area-context": "^4.3.1",
+        "react-native-screens": "^3.15.0",
+        "react-native-tab-view": "^3.1.1",
+        "react-native-vector-icons": "^9.2.0",
+        "react-native-web": "0.17.7",
+        "react-redux": "^8.0.2",
+        "redux": "^4.2.0",
+        "redux-devtools-extension": "^2.13.9",
+        "redux-thunk": "^2.4.1",
+        "socket.io-client": "^4.5.1"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.12.9"
+    },
+    "private": true
 }
