--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
     "expo": {
-        "name": "sctech",
-        "slug": "sctech",
+        "name": "Sctech",
+        "slug": "Sctech",
         "version": "1.0.0",
         "orientation": "portrait",
         "icon": "./assets/logo22.png",
         "userInterfaceStyle": "light",
         "splash": {
-            "image": "./assets/logo22.png",
+            "image": "./assets/icon-a.png",
             "resizeMode": "contain",
             "backgroundColor": "#ffffff"
         },
