--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@expo/vector-icons": "^13.0.0",
         "@react-native-async-storage/async-storage": "^1.17.7",
+        "@react-native-community/masked-view": "^0.1.11",
         "@react-native-firebase/app": "^15.1.1",
         "@react-native-firebase/crashlytics": "^15.1.1",
         "@react-native-firebase/perf": "^15.1.1",
@@ -34,6 +35,7 @@
         "react-native": "0.68.2",
         "react-native-gesture-handler": "~2.2.1",
         "react-native-modal": "^13.0.1",
+        "react-native-pager-view": "^5.4.25",
         "react-native-paper": "^4.12.2",
         "react-native-reanimated": "^2.9.1",
         "react-native-safe-area-context": "^4.3.1",
@@ -41,6 +43,9 @@
         "react-native-tab-view": "^3.1.1",
         "react-native-vector-icons": "^9.2.0",
         "react-native-web": "0.17.7",
+        "react-native-web-webview": "^1.0.2",
+        "react-native-webview": "^11.22.7",
+        "react-native-youtube-iframe": "^2.2.2",
         "react-redux": "^8.0.2",
         "redux": "^4.2.0",
         "redux-devtools-extension": "^2.13.9",
